Fix nav z-index

--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -1,7 +1,7 @@
 @use '../../sass/variables.scss' as *;
 
 nav {
-  z-index: 2;
+  z-index: 3;
   position: fixed;
   display: flex;
   justify-content: center;
